--- a/index.html
+++ b/index.html
@@ -11,12 +11,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <canvas id="chuva"></canvas>
-    <canvas id="raio"></canvas>
     <!-- Botão de alternância de apps -->
 
     <div id="conteudo">
-      <img src="Img/Sensor.svg" alt="Sensor" class="sensor-image" />
+      <img src="Img/White_Sensor.svg" alt="Sensor" class="sensor-image" />
 
       <div class="inputs-container">
         <div class="sensor-container">
@@ -96,13 +94,6 @@
           <button id="btnCalcularRes">Calcule Ω</button>
         </div>
       </div>
-    </div>
-    <div class="app-toggle">
-      <label class="switch">
-        <input type="checkbox" id="toggleApp" />
-        <span class="slider"></span>
-      </label>
-      <span id="appName">PTEMP</span>
     </div>
 
     <script src="script.js"></script>
