--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Botão de alternância de apps -->
 
     <div id="conteudo">
-      <img src="Img/White_Sensor.svg" alt="Sensor" class="sensor-image" />
+      <img src="Img/sensor1.0.svg" alt="Sensor" class="sensor-image" />
 
       <div class="inputs-container">
         <div class="sensor-container">
