--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <script src="script.js"></script>
 
     <script>
-      // Incremento/decremento dos botões + e -
+      // Incremento/decremento dos botões + e
       document.querySelectorAll(".btn-plus").forEach((btn) => {
         btn.addEventListener("click", () => {
           const target = document.getElementById(btn.dataset.target);
