atualização do modo dark e correção do switch mobile

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
         setTimeout(() => {
           const isDark = document.body.classList.toggle("dark-mode");
-          sensorImage.src = isDark ? "Img/Dark.png" : "Img/SensorFinal.png";
+          sensorImage.src = isDark ? "Img/Darkv1.png" : "Img/SensorFinal.png";
           document.body.classList.remove("fade-out");
         }, 300);
       });
