--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <script src="script.js"></script>
 
     <script>
-      // Incremento/decremento dos botões + e
+      // Incremento/decremento dos botões + e -
       document.querySelectorAll(".btn-plus").forEach((btn) => {
         btn.addEventListener("click", () => {
           const target = document.getElementById(btn.dataset.target);
@@ -125,14 +125,8 @@
       const sensorImage = document.querySelector(".sensor-image");
 
       toggleBtn.addEventListener("click", () => {
-        // Anima o fade de todo o corpo
-        document.body.classList.add("fade-out");
-
-        setTimeout(() => {
-          const isDark = document.body.classList.toggle("dark-mode");
-          sensorImage.src = isDark ? "Img/Dark.png" : "Img/SensorFinal.png";
-          document.body.classList.remove("fade-out");
-        }, 300);
+        const isDark = document.body.classList.toggle("dark-mode");
+        sensorImage.src = isDark ? "Img/Darkv1.png" : "Img/SensorFinal.png";
       });
     </script>
   </body>
