--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
   </head>
 
   <body>
-    <!-- Botão deslizante de tema -->
-    <div class="theme-toggle">
-      <div id="toggleTheme" class="theme-switch">
-        <div class="switch-handle"></div>
-      </div>
+    <div id="toggleTheme" class="theme-switch">
+      <div class="switch-handle"></div>
     </div>
 
     <div id="conteudo">
@@ -94,14 +91,13 @@
           class="saida-temp-fixa"
         />
 
-        <div class="input-box inline-inputs">
+        <div class="input-box inline-inputs botoes-calculo">
           <button id="btnCalcular">Calcule°C</button>
           <button id="btnCalcularRes">Calcule Ω</button>
         </div>
       </div>
     </div>
 
-    <!-- scripts -->
     <script src="script.js"></script>
 
     <script>
