--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sensor PT</title>
+    <title>PTEMP</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap"
       rel="stylesheet"
@@ -12,21 +12,9 @@
   </head>
 
   <body>
-    <section class="loader">
-      <div style="--i: 0" class="slider"></div>
-      <div style="--i: 1" class="slider"></div>
-      <div style="--i: 2" class="slider"></div>
-      <div style="--i: 3" class="slider"></div>
-      <div style="--i: 4" class="slider"></div>
-    </section>
-
-    <div id="app" style="display: none">
-      <!-- todo o conteúdo do seu app -->
-    </div>
-
-    <div id="toggleTheme" class="theme-switch">
+    <button id="toggleTheme" class="theme-toggle">
       <div class="switch-handle"></div>
-    </div>
+    </button>
 
     <div id="conteudo">
       <img src="Img/SensorFinal.png" alt="Sensor" class="sensor-image" />
@@ -112,40 +100,8 @@
 
     <script src="script.js"></script>
 
-    <script>
-      window.addEventListener("load", () => {
-        const loader = document.querySelector(".loader");
-        const app = document.getElementById("app");
-
-        // Espera 1 segundo pra suavizar a transição
-        setTimeout(() => {
-          loader.classList.add("hidden");
-          app.style.display = "block";
-        }, 6000);
-      });
-      // Incremento/decremento dos botões + e -
-      document.querySelectorAll(".btn-plus").forEach((btn) => {
-        btn.addEventListener("click", () => {
-          const target = document.getElementById(btn.dataset.target);
-          target.stepUp();
-        });
-      });
-
-      document.querySelectorAll(".btn-minus").forEach((btn) => {
-        btn.addEventListener("click", () => {
-          const target = document.getElementById(btn.dataset.target);
-          target.stepDown();
-        });
-      });
-
-      // 🌙 Alternância de modo claro/escuro com botão deslizante
-      const toggleBtn = document.getElementById("toggleTheme");
-      const sensorImage = document.querySelector(".sensor-image");
-
-      toggleBtn.addEventListener("click", () => {
-        const isDark = document.body.classList.toggle("dark-mode");
-        sensorImage.src = isDark ? "Img/Darkv1.png" : "Img/SensorFinal.png";
-      });
-    </script>
+    <script></script>
+    <!-- Pré-carrega a imagem do modo dark -->
+    <link rel="preload" href="Img/Darkv1.png" as="image" />
   </body>
 </html>
