--- a/index.html
+++ b/index.html
@@ -12,11 +12,69 @@
   </head>
 
   <body>
-    <button id="toggleTheme" class="theme-toggle">
-      <div class="switch-handle"></div>
-    </button>
+    <!-- ======= LOADER ======= -->
 
-    <div id="conteudo">
+    <div class="loader">
+      <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+        <defs>
+          <filter id="goo">
+            <feGaussianBlur
+              in="SourceGraphic"
+              stdDeviation="6"
+              result="blur"
+            ></feGaussianBlur>
+            <feColorMatrix
+              in="blur"
+              mode="matrix"
+              values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7"
+              result="goo"
+            ></feColorMatrix>
+            <feBlend in="SourceGraphic" in2="goo"></feBlend>
+          </filter>
+        </defs>
+      </svg>
+    </div>
+
+    <!-- ======= TELA INICIAL ======= -->
+    <div id="homeScreen" class="home-screen">
+      <h1>Selecione o Aplicativo</h1>
+      <div class="button-group">
+        <!-- Botão PTEMP -->
+        <label class="toggle-container menu-btn" id="btnPTEMP">
+          <img src="Img/icon ptemp.png" alt="Ícone PTEMP" class="app-icon" />
+          <input type="checkbox" />
+          <div class="toggle-button">
+            <span class="btn-text"></span>
+          </div>
+        </label>
+
+        <!-- Botão mV -->
+        <label class="toggle-container menu-btn" id="btnMV">
+          <img src="Img/icon miliv.png" alt="Ícone mV" class="app-icon" />
+          <input type="checkbox" />
+          <div class="toggle-button">
+            <div class="glow"></div>
+            <div class="texture"></div>
+            <span class="btn-text"></span>
+          </div>
+        </label>
+      </div>
+    </div>
+
+    <!-- ======= TELA "EM DESENVOLVIMENTO" ======= -->
+    <div id="devScreen" class="hidden">
+      <h2>Em Desenvolvimento</h2>
+      <p>Disponível em breve!</p>
+      <h1>Dev Andreivison Paes</h1>
+      <button id="btnHomeDev" class="home-button">Voltar</button>
+    </div>
+
+    <!-- ======= TELA PTEMP ======= -->
+    <div id="conteudo" class="hidden">
+      <!-- Botão HOME -->
+      <button id="btnHomeApp" class="home-button">Home</button>
+
+      <!-- Conteúdo do aplicativo PTEMP -->
       <img src="Img/SensorFinal.png" alt="Sensor" class="sensor-image" />
 
       <div class="inputs-container">
@@ -33,23 +91,11 @@
           <h3>Faixa do Sensor (°C)</h3>
           <div class="inline-inputs">
             <div class="custom-number">
-              <input
-                type="number"
-                id="faixaMin"
-                placeholder="Mín"
-                value="0"
-                step="1"
-              />
+              <input type="number" id="faixaMin" value="0" step="1" />
             </div>
 
             <div class="custom-number">
-              <input
-                type="number"
-                id="faixaMax"
-                placeholder="Máx"
-                value="100"
-                step="1"
-              />
+              <input type="number" id="faixaMax" value="100" step="1" />
               <div class="controls">
                 <button class="btn-minus" data-target="faixaMax">−</button>
                 <button class="btn-plus" data-target="faixaMax">+</button>
@@ -98,10 +144,11 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <!-- Switch de tema -->
+    <button id="toggleTheme" class="theme-toggle">
+      <div class="switch-handle"></div>
+    </button>
 
-    <script></script>
-    <!-- Pré-carrega a imagem do modo dark -->
-    <link rel="preload" href="Img/Darkv1.png" as="image" />
+    <script src="script.js"></script>
   </body>
 </html>
