--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           </filter>
         </defs>
       </svg>
+      <div class="loader-footer">Dev Andreivison Paes</div>
     </div>
     <div id="conteudo" class="hidden">
       <img src="Img/SensorFinal.png" alt="Sensor" class="sensor-image" />
